--- a/.gitignore
+++ b/.gitignore
@@ -78,10 +78,12 @@ target/
 .ipynb_checkpoints
 
 # IPython
+# Folders containing IPython session history, logs, etc.
 profile_default/
 ipython_config.py
 
 # pyenv
+# Python version file
 .python-version
 
 # pipenv
@@ -109,15 +111,30 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.direnv/
+pythonenv/
 
-# Spyder project settings
+# IDE / Editor specific files
+# IntelliJ / PyCharm
+.idea/
+*.iml
+
+# VSCode
+.vscode/
+
+# Spyder
 .spyderproject
 .spyproject
 
-# Rope project settings
+# Rope
 .ropeproject
 
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
 # mkdocs documentation
+# Ensure this is treated as a directory from the root
 /site
 
 # mypy
@@ -127,3 +144,13 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Operating System generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+Desktop.ini
